# per-message

./: .gitignore  README.md
backend/Laravel/: clear-all.sh  per_message
backend/Laravel/app/Http/Controllers/Api/: AuthController.php  MessageController.php
backend/Laravel/app/Http/Resources/: MessageResource.php
backend/Laravel/app/Models/: Message.php  User.php
backend/Laravel/config/: auth.php
backend/Laravel/database/migrations/: 2025_06_13_131441_create_messages_table.php
backend/Laravel/routes/: api.php
backend/Python/: auth.py  crud.py  main.py  models.py  requirements.txt  schemas.py
backend/Python/app/: database.py
backend/Rust/: Cargo.toml
backend/Rust/.sqlx/: query-0215868f28969ad77f4dacce776cb81d2b462ad8a45e578d57b2cb7f74549537.json  query-58cb72e102991baefd285067ee5aacb45c2db9f3dccb9512592c61e6e21238e7.json  query-e25317bf5c8267085c31cb1f31a50c874f42cdff9ae752452f3376a7067a8136.json
backend/Rust/src/: main.rs
frontend/Laravel/: README.md  package-lock.json  package.json  vite.config.js
frontend/Laravel/src/: App.vue  main.js
frontend/Laravel/src/components/: ChatMessage.vue  GlobalChatPanel.vue  InquiryFormDialog.vue  MessageComponent.vue
frontend/Laravel/src/data/: customers.json  messages.json
frontend/Laravel/src/plugins/: vuetify.js
frontend/Laravel/src/router/: index.js
frontend/Laravel/src/services/: api.js
frontend/Laravel/src/stores/: auth.js  chatStore.js  inquiryDialogStore.js
frontend/Laravel/src/views/: CustomersView.vue  DashboardView.vue  IndexView.vue  LoginView.vue  ProfileView.vue  TestPanelView.vue
