[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"

# La versión correcta de sqlx con todas sus features
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "mysql", "macros", "chrono", "json" ] }

# La versión correcta de chrono con la feature de serde
chrono = { version = "0.4", features = ["serde"] }